# StandardLandcoverArray

./: README.md  inventory.csv  main.py  pyproject.toml  ruff.toml
code/: main.py
code/download/: _dltools.py  ghs_pop.py
code/transform/: _tstools.py  ghs_pop.py
docs/: ghs_pop.md
