[project]
name = "standardlandcoverarray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "rioxarray>=0.18.2",
    "ruff>=0.11.6",
    "tqdm>=4.67.1",
]
